[package]
name = "yozhik"
version = "0.1.0"
authors = ["Nikita Vilunov <nikita@vilunov.me>"]
edition = "2018"
build = "src/build.rs"

[build-dependencies]
built = "0.3"

[dependencies]
log = "0.4"
env_logger = "0.6"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

futures = "0.1"
lazy_static = "1.2"
rand = "0.6"

hmac = "0.7"
sha-1 = "0.8"
hex = "0.3"
base64 = "0.10.1"
toml = "0.4.10"

[dependencies.actix-web]
version = "0.7"
features = ["ssl"]

[profile.release]
lto = true
